--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -4,7 +4,7 @@
 
 .masthead {
   position: fixed; //to fix the masthead https://krisshen.com/project_website/how-to-make-header-sticky/ and https://github.com/mmistakes/minimal-mistakes/issues/490
-  top: -0.5;
+  top: 0;
   border-bottom: 1px solid $border-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
@@ -13,7 +13,7 @@
   z-index: 20;
   width: 100%; // set width
   background: $background-color;  // set a color to hide content that may appear below masthead
-  height: $masthead-height; //<-- set header's height
+  height: 1em; //<-- set header's height $masthead-height
 
   &__inner-wrap {
     @include clearfix;
