--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -13,7 +13,7 @@
   z-index: 20;
   width: 100%; // set width
   background: $background-color;  // set a color to hide content that may appear below masthead
-  height: 1em; //<-- set header's height $masthead-height
+  height: 85px; ; //<-- set header's height $masthead-height
 
   &__inner-wrap {
     @include clearfix;
