--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -10,7 +10,8 @@ html {
 
 body {
   margin: 0;
-  padding: $masthead-height 0 0;
+  padding: 65px 0 0; //<-- set page body's top padding to 65
+                     //and set 0 padding for left and right sides
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
