--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -49,7 +49,7 @@ body {
 
   .page__inner-wrap {
     float: left;
-    margin-top: 1em;
+    margin-top: 2em;
     margin-left: 0;
     margin-right: 0;
     width: 100%;
@@ -69,7 +69,7 @@ body {
 }
 
 .page__title {
-  margin-top: 2; //0
+  margin-top: 0; 
   line-height: 1;
 
   & + .page__meta {
