--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,5 +38,9 @@
 
     {% include scripts.html %}
 
+    <aside class="sidebar__top">
+    <a href="#site-nav"> <i class="fas fa-angle-double-up fa-2x"></i></a>
+    </aside>
+    
   </body>
 </html>
