--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     </div>
     
     <aside class="sidebar__top">
-    <a href="#site-nav"> <i class="fad fa-angle-double-up fa-2x"></i></a>
+    <a href="#site-nav"> <i class="fas fa-angle-double-up fa-2x"></i></a>
     </aside>
     
     {% include scripts.html %}
