--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -8,14 +8,14 @@
 
 .sidebar {
   @include clearfix();
-  //  padding-top: 40px;
-  @include breakpoint(max-width $large) {
+    padding-top: 40px;
+  //@include breakpoint(max-width $large) {
      /* fix z-index order of follow links */
-     position: relative;
-     z-index: 10;
-     -webkit-transform: translate3d(0, 0, 0);
-     transform: translate3d(0, 0, 0);
-  }
+    // position: relative;
+    // z-index: 10;
+    // -webkit-transform: translate3d(0, 0, 0);
+    // transform: translate3d(0, 0, 0);
+  //}
 
   @include breakpoint($large) {
     float: left;
