--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -554,7 +554,7 @@
     border-bottom: 1px solid $border-color;
 
     &:hover {
-      color: #fff; //$text-color
+      color: $primary-color; //$text-color
     }
   }
 
@@ -582,5 +582,5 @@
 
 .sidebar__right.sticky > .toc > .toc__menu {
   overflow-y: auto;
-  max-height: calc(100vh - 7em);
+  max-height: calc(80vh - 7em); #calc(100vh - 7em)
 }
