--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -554,7 +554,7 @@
     border-bottom: 1px solid $border-color;
 
     &:hover {
-      color: $primary-color; //$text-color
+      color: #FFC300 ; //$text-color
     }
   }
 
